--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,5 +1,12 @@
-<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column"
+<div class="container" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column"
 	fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+
+	<div fxFlex="100">
+		<div>
+			<h3>{{dish.name | uppercase}}</h3>
+			<hr>
+		</div>
+	</div>
 
 	<div fxFlex="40" *ngIf="dish">
 		<mat-card>
@@ -17,7 +24,7 @@
 				<button mat-button>LIKE</button>
 				<button mat-button>SHARE</button>
 			</mat-card-actions>
-		</mat-card>>
+		</mat-card>
 	</div>
 
 	<div fxFlex="40" *ngIf="dish">
@@ -38,5 +45,4 @@
 			</mat-list-item>
 		</mat-list>
 	</div>
-
 </div>
