--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -26,6 +26,9 @@
 			</mat-card-actions>
 		</mat-card>
 	</div>
+	<div [hidden]="dish">
+		<mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+	</div>
 
 	<div fxFlex="40" *ngIf="dish">
 		<mat-list>
@@ -44,5 +47,8 @@
 				</p>
 			</mat-list-item>
 		</mat-list>
+	</div>
+	<div [hidden]="dish">
+		<mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
 	</div>
 </div>
