--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -25,6 +25,11 @@
 				<button mat-button>SHARE</button>
 			</mat-card-actions>
 		</mat-card>
+		<mat-card-actions>
+			<button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
+			<span class="flex-spacer"></span>
+			<button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
+		</mat-card-actions>
 	</div>
 	<div [hidden]="dish">
 		<mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
