--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,12 @@ body {
 .text-floral-white {
   color: floralwhite !important;
 }
-
 .flex-spacer {
   flex: 1 1 auto;
+}
+.highlight {
+	background-color: $background-pale;
+	border: 1px solid $primary-color-dark;
+	z-index: 1;
+	transform: scale(1.01);
 }
