--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,7 +1,7 @@
 <div class="container" fxLayout="row wrap" fxLayout.sm="column" fxLayout.xs="column"
 	fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px" fxLayoutGap.xs="0">
 
-	<div fxFlex="40" *ngIf="dish">
+	<div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
 		<mat-card>
 			<mat-card-header>
 				<mat-card-title>
@@ -28,7 +28,7 @@
 		<mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
 	</div>
 
-	<div fxFlex="40" *ngIf="dish">
+	<div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
 		<mat-list>
 			<mat-list-item>
 				<h2> Comments </h2>
