--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,13 @@
 <div class="container" fxLayout="column" fxLayoutGap="10px">
 
-	<div fxFlex>
+	<div fxFlex @expand>
 		<div>
 			<h3>About Us</h3>
 			<hr>
 		</div>
 	</div>
 
-	<div fxFlex>
+	<div fxFlex @expand>
 		<div fxLayout="column" fxLayout.gt-sm="row">
 			<div fxFlex="70">
 				<h2>Our History</h2>
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-	<div fxFlex>
+	<div fxFlex @expand>
 		<mat-card>
 			<blockquote>
 				<h3>You better cut the pizza in four pieces because
@@ -56,11 +56,11 @@
 	</div>
 
 
-	<div fxFlex *ngIf="leaders">
+	<div fxFlex *ngIf="leaders" @expand>
 		<h2>Corporate Leadership</h2>
 		<mat-list>
 			<mat-list-item *ngFor="let leader of leaders">
-				<img mat-list-avatar src={{leader.image}} alt={{leader.name}} />
+				<img mat-list-avatar src="{{ BaseURL + leader.image}}" alt={{leader.name}} />
 				<p mat-line>
 					<span>{{leader.name}}</span>
 				</p>
@@ -73,7 +73,11 @@
 			</mat-list-item>
 		</mat-list>
 	</div>
-	<div [hidden]="leaders">
+	<div [hidden]="leaders || errMess">
 		<mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
 	</div>
+	<div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
 </div>
